fix boulder measurement to display fully on small mobile like iPhone 5

--- a/templates/mobile/app.less
+++ b/templates/mobile/app.less
@@ -90,6 +90,9 @@
 
 			#ranking-result-index_ranking-result-boulder_measurement {
 				.popupMainDiv {
+					&> table {
+						margin-top: 15px;
+					}
 					padding-right: 10px;
 					input, button,span, select, label {
 						.mob-fontsize-xxl;
@@ -118,8 +121,7 @@
 					#ranking-result-index_nm\[boulder_n\], #ranking-result-index_try, #ranking-result-index_zone, #ranking-result-index_top {width:150px;}
 					.bottomRow button {margin-bottom: 15px;margin-right:10px;}
 					.bottomRow td:first-child {padding-left:8px;}
-
-
+					button#ranking-result-index_button\[next\].nextButton {margin-right: 0;}
 				}
 
 			}
@@ -128,9 +130,8 @@
 			}
 			#ranking-result-index_msg {
 				position: absolute;
-				top: 53px;
-				left: 33%;
-				right: 33%;
+				top: 50px;
+				left: 18px;
 				background: transparent;
 			}
 		}
